--- a/angular-groupomania/src/styles.scss
+++ b/angular-groupomania/src/styles.scss
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --blue: #53a4e3;
+  --marine: #213346;
+  --grey: #f4f6f8;
+}
 
 html, body {
   height: 100%;
@@ -22,4 +27,13 @@ body {
 }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+* {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+textarea:focus, input:focus{
+  outline: 0;
+}
