--- a/angular-groupomania/src/app/app.component.scss
+++ b/angular-groupomania/src/app/app.component.scss
@@ -9,6 +9,8 @@
 .page-content {
   height: 100%;
   min-height: 800px;
+  padding-top: 5em;
+  background: var(--grey);
 }
 
 header {
@@ -17,7 +19,7 @@ header {
   align-items: center;
   height: 80px;
   width: 100%;
-  background: #B79FAD;
+  background: var(--blue);
   .inherit {
     display: flex;
     justify-content: space-between;
@@ -25,4 +27,9 @@ header {
     height: 120px;
     width: 100%;
   }
+}
+
+.header {
+  position: sticky;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px !important;
 }
