--- a/angular-groupomania/src/app/pages/dashboard/comment/comment.component.scss
+++ b/angular-groupomania/src/app/pages/dashboard/comment/comment.component.scss
@@ -1,9 +1,10 @@
 .comments-view {
   width: 100%;
-  height: 200px;
+  height: auto;
+  max-height: 200px;
   overflow-y: auto;
   .comment {
-    background: #556F7A;
+    background: var(--grey);
     white-space: pre-wrap;
     display: flex;
     flex-direction: column;
@@ -12,7 +13,7 @@
     margin-top: 12px;
     border-radius: 15px;
     padding: 5px;
-    border: 1px solid grey;
+    border: 1px solid #fefefe;
     .body {
       width: fit-content;
     }
@@ -26,9 +27,11 @@
   border-radius: 15px;
   .inline-block {
     display: inline-block;
-    margin: 5px;
+    width: calc(80% - 10px);
     font-size: 18px;
-    border-radius: 5px;
+    border: none;
+    padding: 0.5em 0.5em;
+    border-bottom: 1px solid #444444;
   }
 }
 
@@ -36,11 +39,12 @@
   display: flex;
   width: auto;
   height: auto;
-  margin: 0px 25px 10px 0px;
-  justify-content: flex-start;
+  margin: 10px 0px 10px 25px;
+  width: calc(80% - 10px);
+  justify-content: flex-end;
   .create {
     padding: 6px 12px;
-    background-color: #2E6171;
+    background-color: var(--marine);
     border-radius: 5px;
     margin-left: 12px;
     color: white;
