--- a/angular-groupomania/src/app/pages/dashboard/dashboard.component.scss
+++ b/angular-groupomania/src/app/pages/dashboard/dashboard.component.scss
@@ -1,6 +1,7 @@
 h1 {
   font-size: 32px;
-  margin: 5px;
+  margin: 1em 0;
+  color: white;
 }
 
 h2 {
@@ -13,7 +14,7 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: #556F7A;
+  background: var(--grey);
 }
 
 .article-creation {
@@ -21,11 +22,12 @@ h2 {
   justify-content: center;
   align-items: center;
   border-radius: 15px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
   padding: 12px;
   margin-top: 12px;
-  width: 60%;
-  background: #2E6171;
-  overflow: hidden;
+  width: 50%;
+  background: var(--blue);
+  height: auto;
   .form {
     display: flex;
     flex-direction: column;
@@ -35,6 +37,9 @@ h2 {
       margin: 5px;
       font-size: 18px;
       border-radius: 5px;
+      border: none;
+      padding: 0.5em 0.5em;
+
     }
   }
 }
@@ -61,8 +66,8 @@ and (max-width: 550px) {
   margin: 15px 25px 10px 0px;
   justify-content: center;
   .create {
-    padding: 6px 12px;
-    background-color: #B79FAD;
+    padding: 1em 3em;
+    background-color: var(--marine);
     border-radius: 5px;
     color: white;
     box-shadow: none;
@@ -71,7 +76,9 @@ and (max-width: 550px) {
       cursor: pointer;
     }
     &:disabled {
-      background-color: darkgrey;
+      background-color: var(--marine);
+      opacity: .65;
+      color: white;
       cursor: not-allowed;
     }
   }
@@ -82,7 +89,7 @@ and (max-width: 550px) {
   flex-direction: column;
   width: 50%;
   height: 70%;
-  margin: 5px 0px;
+  margin-top: 2em;
   padding: 12px 36px;
   align-items: center;
   overflow-y: auto;
@@ -92,12 +99,14 @@ and (max-width: 550px) {
     display: flex;
     flex-direction: column;
     height: auto;
+    margin-bottom: 1em;
     width: 100%;
-    background: #D4AFCD;
+    background: white;
     padding: 24px;
-    margin-top: 12px;
     border-radius: 15px;
     overflow-wrap: break-word;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
     .title {
       h2 {
         text-overflow: ellipsis;
@@ -119,14 +128,18 @@ and (max-width: 550px) {
     width: 15em;
     height: 2em;
   }
+  .inline-block {
+    width: 15em;
+  }
 }
-
-
 
 @media screen and (min-width: 900px) and (max-width: 1400px) {
   .text-input {
     width: 30em;
     height: 2em;
+  }
+  .inline-block {
+    width: 30em;
   }
 }
 
@@ -136,11 +149,17 @@ and (max-width: 550px) {
     width: 40em;
     height: 4em;
   }
+  .inline-block {
+    width: 40em;
+  }
 }
 
 @media screen and (max-width: 400px) {
   .text-input {
     width: 10em;
     height: 2em;
+  }
+  .inline-block {
+    width: 10em;
   }
 }
